# android-display-mirror

./: .gitignore  .gitmodules  README.md  build.gradle  build.sh  settings.gradle
.github/workflows/: apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airplay_bridge.cpp  airplay_bridge.h  audio.cpp  input.cpp  logging.cpp  nvhttp.cpp  stream.cpp  sunshine.cpp  sunshine.h  video.h  video_colorspace.cpp  video_colorspace.h
app/src/main/cpp/dependencies/: Boost_Sunshine.cmake
app/src/main/cpp/platform/: common.cpp
app/src/main/res/drawable/: ic_airplay.xml  ic_displaylink.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_logs.xml  ic_moonlight.xml  ic_overview.xml  ic_rotate.xml  ic_rotate_cw.xml  ic_screen_off.xml  ic_sync.xml  ic_touchscreen.xml  mouse_cursor.xml  scroll_track_background.xml  touchpad_background.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_mirror_settings.xml  activity_touchpad.xml  dialog_manual_client_input.xml  dialog_resolution_settings.xml  floating_back_button.xml  fragment_airplay.xml  fragment_displaylink.xml  fragment_home.xml  fragment_logs.xml  fragment_moonlight.xml  fragment_overview.xml  fragment_settings.xml  item_log.xml
doubletake/: airplay1.go  key_patch.go  patches.go
doubletake/airplaylib/: airplay1.go  airplay2.go  airplaylib.go
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  video.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api-stub/: build.gradle
(+90 files in other folders)
